--- a/hack-or-snooze/index.html
+++ b/hack-or-snooze/index.html
@@ -38,7 +38,8 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="nav-link" id="Nav-submit" href="#">Submit</a>
+      <a class="nav-link mx-2" id="Nav-submit" href="#">Submit</a>
+      <a class="nav-link mx-2" id="Nav-favorites" href="#">Favorites</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -91,7 +92,7 @@
       <ol id="AllStoriesList" class="stories-list"></ol>
 
       <!-- List of all favorited stories -->
-      <ol id="FavoritedStoriesList" class="stories-list"></ol>
+      <ol id="FavoritedStoriesList" class="stories-list d-none">HEY</ol>
 
     </section>
 
